--- a/src/styles/cp.css
+++ b/src/styles/cp.css
@@ -92,12 +92,12 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
-.h5p-course-presentation .h5p-wrapper:focus-visible {
-  outline: none;
-  border: 1px solid #457AD1;
+.h5p-course-presentation .h5p-wrapper:focus {
+  outline: auto;
+  border: 1px solid;
 }
 .h5p-course-presentation .h5p-element .h5p-element-inner:focus-visible {
-  outline: 2px solid #457AD1;
+  outline: 2px solid #79abfd;
   outline-offset: -2px;
 }
 .h5p-course-presentation .h5p-box-and-nav-wrapper {
@@ -146,7 +146,7 @@
   backface-visibility: hidden;
 }
 .h5p-course-presentation .h5p-slide:focus-within {
-  outline: 2px solid #457AD1;
+  outline: 2px solid #79abfd;
   outline-offset: -2px;
 }
 .h5p-course-presentation .h5p-slide.h5p-animate {
@@ -891,3 +891,36 @@
 .h5p-course-presentation .h5p-audio-recorder-view [role=status] {
   font-size: .85em;
 }
+.display-none {
+  display: none;
+}
+.slideInUp {
+  -webkit-animation-name: slideInUp;
+  animation-name: slideInUp;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  }
+  @-webkit-keyframes slideInUp {
+  0% {
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+  visibility: visible;
+  }
+  100% {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  }
+  }
+  @keyframes slideInUp {
+  0% {
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+  visibility: visible;
+  }
+  100% {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  }
+  } 
