--- a/src/styles/cp.css
+++ b/src/styles/cp.css
@@ -4,6 +4,7 @@
   src: url('../fonts/DroidSans.ttf') format('truetype');
   font-weight: normal;
 }
+
 @font-face {
   font-family: 'H5PDroidSans';
   src: url('../fonts/DroidSans-Bold.ttf') format('truetype');
@@ -13,11 +14,11 @@
 /* IcoMoon font licensed under the GNU General Public License: http://www.gnu.org/licenses/gpl.html */
 @font-face {
   font-family: 'H5PCoursePresentation';
-  src:url('../fonts/H5P.eot?7pqlet');
-  src:url('../fonts/H5P.eot?7pqlet#iefix') format('embedded-opentype'),
-  url('../fonts/H5P.ttf?7pqlet') format('truetype'),
-  url('../fonts/H5P.woff?7pqlet') format('woff'),
-  url('../fonts/H5P.svg?7pqlet#H5P') format('svg');
+  src: url('../fonts/H5P.eot?7pqlet');
+  src: url('../fonts/H5P.eot?7pqlet#iefix') format('embedded-opentype'),
+    url('../fonts/H5P.ttf?7pqlet') format('truetype'),
+    url('../fonts/H5P.woff?7pqlet') format('woff'),
+    url('../fonts/H5P.svg?7pqlet#H5P') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -50,6 +51,7 @@
   padding: 0;
   margin: 0 0 0.5em;
 }
+
 .h5p-course-presentation h3 {
   font-size: 1.333em;
   font-weight: bold;
@@ -57,6 +59,7 @@
   padding: 0;
   margin: 0 0 0.5em;
 }
+
 .h5p-course-presentation p {
   font-size: 1em;
   font-weight: normal;
@@ -64,6 +67,7 @@
   padding: 0;
   margin: 0 0 1em;
 }
+
 .h5p-course-presentation p:last-child {
   margin-bottom: 0;
 }
@@ -92,19 +96,23 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
+
 .h5p-course-presentation .h5p-wrapper:focus {
   outline: auto;
   border: 1px solid;
 }
+
 .h5p-course-presentation .h5p-element .h5p-element-inner:focus-visible {
   outline: 2px solid #79abfd;
   outline-offset: -2px;
 }
+
 .h5p-course-presentation .h5p-box-and-nav-wrapper {
   height: 93.5%;
   display: inline-flex;
   flex-direction: column-reverse;
 }
+
 .h5p-course-presentation .h5p-box-wrapper {
   width: 100%;
   height: 96%;
@@ -114,10 +122,11 @@
 }
 
 /* Disable fullscreen buttons inside Course Presentation when it is in full screen */
-.h5p-course-presentation.h5p-fullscreen video .controlBar > .fullscreenButton,
+.h5p-course-presentation.h5p-fullscreen video .controlBar>.fullscreenButton,
 .h5p-course-presentation.h5p-fullscreen video::-webkit-media-controls-fullscreen-button {
   display: none;
 }
+
 .h5p-course-presentation .h5p-presentation-wrapper {
   z-index: 1;
   text-align: left;
@@ -145,10 +154,12 @@
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .h5p-course-presentation .h5p-slide:focus-within {
   outline: 2px solid #79abfd;
   outline-offset: -2px;
 }
+
 .h5p-course-presentation .h5p-slide.h5p-animate {
   display: block;
   -webkit-transition: -webkit-transform 0.25s ease-in-out;
@@ -156,9 +167,11 @@
   -ms-transition: -ms-transform 0.25s ease-in-out;
   transition: transform 0.25s ease-in-out;
 }
+
 .h5p-course-presentation .h5p-slide.h5p-touch-move {
   display: block;
 }
+
 .h5p-course-presentation .h5p-current {
   display: block;
   -webkit-transform: translateX(0) translateZ(0);
@@ -167,6 +180,7 @@
   transform: translateX(0) translateZ(0);
   z-index: 2;
 }
+
 .h5p-course-presentation .h5p-previous {
   -webkit-transform: translateX(-100%);
   -moz-transform: translateX(-100%);
@@ -179,10 +193,12 @@
   position: absolute;
   left: 0.5em;
 }
+
 .h5p-course-presentation .h5p-action-bar {
   position: absolute;
   right: 0.5em;
 }
+
 .h5p-course-presentation .h5p-action-bar a,
 .h5p-course-presentation .h5p-action-foo a {
   text-decoration: none;
@@ -210,10 +226,12 @@
   padding: 0;
   margin: 0 0.2em;
 }
+
 .h5p-course-presentation .h5p-slide-button a {
   color: #323232;
   padding: 0.3em;
 }
+
 .h5p-course-presentation .h5p-slide-button.h5p-current a {
   color: #ffffff;
   background: #0097fd;
@@ -222,14 +240,17 @@
   background-image: linear-gradient(to bottom, #0097fd, #096bcb);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0097fd', endColorstr='#096bcb', GradientType=0);
 }
+
 .h5p-course-presentation .h5p-slide-button a:hover {
   color: #525252;
 }
+
 .h5p-course-presentation .h5p-slide-button.h5p-current a:hover {
   color: #ffffff;
 }
 
-.h5p-course-presentation .h5p-has-solutions a, .h5p-course-presentation .h5p-has-solutions a:hover {
+.h5p-course-presentation .h5p-has-solutions a,
+.h5p-course-presentation .h5p-has-solutions a:hover {
   text-decoration: underline;
 }
 
@@ -295,7 +316,7 @@
 .h5p-course-presentation .h5p-popup-container {
   background-color: #fff;
   border: none;
-  box-shadow: 0 0 0.625em 0 rgba(0,0,0,.25);
+  box-shadow: 0 0 0.625em 0 rgba(0, 0, 0, .25);
   left: 5%;
   position: absolute;
   top: 10%;
@@ -327,6 +348,7 @@
   text-align: left;
   overflow-y: auto;
 }
+
 .h5p-course-presentation .h5p-popup-overlay.h5p-video .h5p-popup-container .h5p-popup-wrapper {
   overflow-y: hidden;
 }
@@ -373,9 +395,11 @@
 .h5p-popup-overlay.h5p-singlechoiceset .h5p-sc-sound-control {
   right: 1.2em;
 }
+
 .h5p-button-element.h5p-sc-set-wrapper {
   overflow: hidden;
 }
+
 .h5p-course-presentation .h5p-popup-container tfoot {
   font-weight: bold;
 }
@@ -450,6 +474,7 @@
   font-size: 1.5em;
   line-height: 1.4;
 }
+
 .h5p-course-presentation .h5p-element-button.h5p-element-button-big:before {
   font-size: 0.87em;
 }
@@ -466,7 +491,8 @@
 .h5p-course-presentation .h5p-interactivevideo-button,
 .h5p-course-presentation .h5p-truefalse-button {
   background: #981d99;
-  border-color: #e489f3; /* Used by focus effect */
+  border-color: #e489f3;
+  /* Used by focus effect */
 }
 
 .h5p-course-presentation .h5p-exportabletextarea-button:hover,
@@ -548,25 +574,32 @@
 .h5p-course-presentation .h5p-interactivevideo-button:before {
   content: "\f03d";
 }
+
 .h5p-course-presentation .h5p-singlechoiceset-button:before {
   content: "\e993";
 }
+
 .h5p-course-presentation .h5p-dragtext-button:before {
   content: "\e600";
 }
+
 .h5p-course-presentation .h5p-dialogcards-button:before {
   content: "\e900";
   vertical-align: middle;
 }
+
 .h5p-course-presentation .h5p-markthewords-button:before {
   content: "\e601";
 }
+
 .h5p-course-presentation .h5p-twitteruserfeed-button:before {
   content: "\f099";
 }
+
 .h5p-course-presentation .h5p-chart-button:before {
   content: "\f200";
 }
+
 .h5p-course-presentation .h5p-audiorecorder-button:before {
   content: "\f130";
   position: relative;
@@ -602,7 +635,8 @@
 .h5p-course-presentation .h5p-close-popup:before {
   font-family: 'H5PFontAwesome4';
   content: "\f057";
-  color: dimgrey;;
+  color: dimgrey;
+  ;
   vertical-align: middle;
 }
 
@@ -610,7 +644,8 @@
   color: black;
 }
 
-.h5p-course-presentation .h5p-element-inner.h5p-video, .h5p-course-presentation .h5p-element-inner.h5p-audio {
+.h5p-course-presentation .h5p-element-inner.h5p-video,
+.h5p-course-presentation .h5p-element-inner.h5p-audio {
   background-color: #000;
   width: 100%;
 }
@@ -618,6 +653,7 @@
 .h5p-course-presentation .h5p-button-element.h5p-audio-wrapper .h5p-audio {
   min-height: 30px;
 }
+
 .h5p-course-presentation .h5p-button-element {
   margin: 0 auto;
 }
@@ -677,11 +713,12 @@
   outline: none;
   padding: 0.375em 0.5em;
 }
+
 .h5p-course-presentation .h5p-element .h5p-element-inner.h5p-link {
   padding: 0.375em 0.5em;
 }
 
-.h5p-course-presentation .h5p-element .h5p-element-inner.h5p-ct > .ct {
+.h5p-course-presentation .h5p-element .h5p-element-inner.h5p-ct>.ct {
   padding: 0.375em 0.5em;
 }
 
@@ -690,7 +727,7 @@
   padding: 0;
 }
 
-.h5p-course-presentation .h5p-element.h5p-transparent .h5p-element-inner.h5p-ct > .ct {
+.h5p-course-presentation .h5p-element.h5p-transparent .h5p-element-inner.h5p-ct>.ct {
   padding: 0;
 }
 
@@ -718,16 +755,18 @@
   border-bottom: 0;
 }
 
-.h5p-course-presentation .cke_editable .h5p-table, .h5p-course-presentation .cke_editable .h5p-table th, .h5p-course-presentation .cke_editable .h5p-table td {
+.h5p-course-presentation .cke_editable .h5p-table,
+.h5p-course-presentation .cke_editable .h5p-table th,
+.h5p-course-presentation .cke_editable .h5p-table td {
   border: 0.083em dashed #999;
 }
 
-.h5p-course-presentation .h5p-ct > .ct {
+.h5p-course-presentation .h5p-ct>.ct {
   font-size: 100%;
   line-height: 165%;
 }
 
-.h5p-course-presentation .ct > *:last-child {
+.h5p-course-presentation .ct>*:last-child {
   margin: 0;
 }
 
@@ -738,24 +777,24 @@
   line-height: 1.25em;
 }
 
-.h5p-course-presentation .h5p-copyinfo > dt {
+.h5p-course-presentation .h5p-copyinfo>dt {
   float: left;
   margin: 0 0.75em 0 0;
 }
 
-.h5p-course-presentation .h5p-copyinfo > dt:after {
+.h5p-course-presentation .h5p-copyinfo>dt:after {
   content: ":";
 }
 
-.h5p-course-presentation .h5p-copyinfo > dd {
+.h5p-course-presentation .h5p-copyinfo>dd {
   margin: 0;
 }
 
 /* Hides full screen button like in IV, uses own full screen button */
 .h5p-course-presentation .h5p-content-controls {
-  visibility:hidden;
+  visibility: hidden;
   position: absolute;
-  top:0;
+  top: 0;
 }
 
 .h5p-course-presentation .h5p-presentation-wrapper .h5p-touch-popup {
@@ -773,6 +812,7 @@
   background: #000;
   color: #FFF;
 }
+
 .h5p-course-presentation .h5p-toggle-full-screen {
   position: absolute;
   bottom: 0;
@@ -788,18 +828,22 @@
   line-height: 1em;
   opacity: 0.6;
 }
+
 .h5p-course-presentation .h5p-toggle-full-screen:before {
   font-family: 'H5PFontAwesome4';
   content: "\f065";
 }
+
 .h5p-course-presentation.h5p-fullscreen .h5p-toggle-full-screen:before,
 .h5p-course-presentation.h5p-semi-fullscreen .h5p-toggle-full-screen:before {
   content: "\f066";
 }
+
 .h5p-course-presentation .h5p-toggle-full-screen:focus,
 .h5p-course-presentation .h5p-toggle-full-screen:hover {
   opacity: 0.8;
 }
+
 .h5p-course-presentation .h5p-toggle-full-screen:active {
   opacity: 1;
 }
@@ -867,7 +911,7 @@
   width: 4.375em;
 }
 
-.h5p-course-presentation .h5p-audio-recorder-view .recording-indicator-wrapper > .fa-microphone {
+.h5p-course-presentation .h5p-audio-recorder-view .recording-indicator-wrapper>.fa-microphone {
   font-size: 1.15em;
 }
 
@@ -891,9 +935,11 @@
 .h5p-course-presentation .h5p-audio-recorder-view [role=status] {
   font-size: .85em;
 }
+
 .display-none {
   display: none;
 }
+
 .slideInUp {
   -webkit-animation-name: slideInUp;
   animation-name: slideInUp;
@@ -901,26 +947,123 @@
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
-  }
-  @-webkit-keyframes slideInUp {
+}
+
+@-webkit-keyframes slideInUp {
   0% {
-  -webkit-transform: translateY(100%);
-  transform: translateY(100%);
-  visibility: visible;
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    visibility: visible;
   }
+
   100% {
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
   }
-  }
-  @keyframes slideInUp {
+}
+
+@keyframes slideInUp {
   0% {
-  -webkit-transform: translateY(100%);
-  transform: translateY(100%);
-  visibility: visible;
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    visibility: visible;
   }
+
   100% {
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
   }
-  } 
+}
+
+.slideInDown {
+  -webkit-animation-name: slideInDown;
+  animation-name: slideInDown;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes slideInDown {
+  0% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+    visibility: visible;
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInDown {
+  0% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+    visibility: visible;
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.fadedOut {
+  -webkit-animation-name: fadeOut;
+  animation-name: fadeOut;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
